--- a/algoritm.ipynb
+++ b/algoritm.ipynb
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gain_calutation(voltage_output,voltage_input=495):\n",
+    "def gain_calutation(voltage_output,voltage_input):\n",
     "  \"\"\" Converts Voltage input and ouput to V\n",
     "      Calculates Gain = Vin/Vout\n",
     "\n",
