Edited the decimal points & Removed if statement

--- a/algoritm.ipynb
+++ b/algoritm.ipynb
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gain_calutation(voltage_output,voltage_input):\n",
     "  \"\"\" Converts Voltage input and ouput to V\n",
-    "      Calculates Gain = Vin/Vout\n",
+    "      Calculates Gain = Vout/Vin\n",
     "\n",
     "      Voltages should be mV\n",
     "\n",
@@ -52,14 +52,14 @@
     "  voltage_input = voltage_input/1000\n",
     "  voltage_output = voltage_output/1000\n",
     "\n",
-    "  gain = voltage_input/voltage_output\n",
+    "  gain = voltage_output/voltage_input\n",
     "  print(\"Gain is: \")\n",
-    "  print(gain)"
+    "  print(f\"{gain:.6f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -67,12 +67,12 @@
      "output_type": "stream",
      "text": [
       "Gain is: \n",
-      "23.855421686746986\n"
+      "0.041919\n"
      ]
     }
    ],
    "source": [
-    "gain_calutation(20.75) # 1 frequency"
+    "gain_calutation(20.75, 495) # 1 frequency"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "  # Part 1\n",
     "  wavelength = vel * freq\n",
     "  print(\"Wavelength is:\")\n",
-    "  print(wavelength)\n",
+    "  print(f\"{wavelength:.2f}\")\n",
     "\n",
     "  #Part 2\n",
     "  # converting vin_time and vou_time to s\n",
@@ -131,19 +131,18 @@
     "  vout_time = vout_time/1000\n",
     "\n",
     "  # to avoid negatives\n",
-    "  if vin_time > vout_time:\n",
-    "    time_change = vin_time - vout_time\n",
-    "  else:\n",
-    "    time_change = vout_time - vin_time\n",
+    " \n",
+    "  time_change = vin_time - vout_time\n",
+    "\n",
     "\n",
     "  x = vel * time_change\n",
     "  print(\"Phase difference x:\")\n",
-    "  print(x)\n",
+    "  print(f\"{x:.2f}\")\n",
     "  \n",
     "  # Part 3\n",
     "  phase_diff_phi = 360 * (x/wavelength)\n",
     "  print(\"phase_diff_phi is :\")\n",
-    "  print(phase_diff_phi)\n",
+    "  print(f\"{phase_diff_phi:.8f}\")\n",
     "\n",
     "  return wavelength, x, phase_diff_phi\n",
     "  "
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -159,11 +158,11 @@
      "output_type": "stream",
      "text": [
       "Wavelength is:\n",
-      "854982\n",
+      "854982.00\n",
       "Phase difference x:\n",
-      "191729.7135\n",
+      "191729.71\n",
       "phase_diff_phi is :\n",
-      "80.73\n"
+      "80.73000000\n"
      ]
     },
     {
@@ -172,7 +171,7 @@
        "(854982, 191729.7135, 80.73)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,6 +179,48 @@
    "source": [
     "wavelength_x_phi_calculation(1,227.50,3.25)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gain is: \n",
+      "0.600000\n",
+      "Wavelength is:\n",
+      "85498200000.00\n",
+      "Phase difference x:\n",
+      "-1.26\n",
+      "phase_diff_phi is :\n",
+      "-0.00000001\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(85498200000, -1.2568235400000007, -5.292000000000003e-09)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gain_calutation(300, 500)\n",
+    "wavelength_x_phi_calculation(100000, 0.00244, 0.00391)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
