--- a/algoritm.ipynb
+++ b/algoritm.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sketched This RLC bandpass circuit using Proteus 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image.png](RLC_bandpass_circuit.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Use the peaks of the peaks of the waves."
    ]
   },
@@ -35,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +185,7 @@
        "(854982, 191729.7135, 80.73)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +219,7 @@
        "(85498200000, -1.2568235400000007, -5.292000000000003e-09)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +805,7 @@
        "45                      -1.26           -1.000000e-08  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
