Added Cut of Frequency Calculations

--- a/algoritm.ipynb
+++ b/algoritm.ipynb
@@ -25,6 +25,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "obtaining the input and output waveforms at cut-off frequencies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cut off Frequency Calculation $$frequency = \\frac{1}{2π\\sqrt{L \\cdot C}} = 13627Hz$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Use the peaks of the peaks of the waves."
    ]
   },
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +199,7 @@
        "(854982, 191729.7135, 80.73)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -204,29 +218,29 @@
      "output_type": "stream",
      "text": [
       "Gain is: \n",
-      "0.600000\n",
+      "0.125000\n",
       "Wavelength is:\n",
-      "85498200000.00\n",
+      "1709964.00\n",
       "Phase difference x:\n",
-      "-1.26\n",
+      "67868.47\n",
       "phase_diff_phi is :\n",
-      "-0.00000001\n"
+      "14.28840000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(85498200000, -1.2568235400000007, -5.292000000000003e-09)"
+       "(1709964, 67868.47115999999, 14.288399999999996)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gain_calutation(300, 500)\n",
-    "wavelength_x_phi_calculation(100000, 0.00244, 0.00391)"
+    "gain_calutation(62.50, 500)\n",
+    "wavelength_x_phi_calculation(2, 80.63, 1.25)"
    ]
   },
   {
@@ -238,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +819,7 @@
        "45                      -1.26           -1.000000e-08  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
